[gd_scene load_steps=10 format=2]

[ext_resource path="res://Characters/Ammo/FlakBullet.gd" type="Script" id=1]
[ext_resource path="res://Data/Sprites/flak_bullet.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 6.08276

[sub_resource type="CircleShape2D" id=2]
radius = 12.0

[sub_resource type="Animation" id=3]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=4]
length = 0.4
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 2 ]
}

[sub_resource type="Gradient" id=5]
offsets = PoolRealArray( 0.445545, 1 )
colors = PoolColorArray( 0.890196, 0.0784314, 0.0784314, 1, 0.917647, 0.901961, 0.407843, 1 )

[sub_resource type="GradientTexture" id=6]
gradient = SubResource( 5 )

[sub_resource type="ParticlesMaterial" id=7]
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 100.0
initial_velocity_random = 0.75
angular_velocity = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
color_ramp = SubResource( 6 )

[node name="FlakBullet" type="KinematicBody2D"]
scale = Vector2( 0.75, 0.75 )
collision_layer = 0
collision_mask = 4
script = ExtResource( 1 )
speed = 1600.0
life_span = 0.8
damage = 2.0
dispersion = 12.0

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.5708
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 6
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 12, 0 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="Lifespan" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/explode = SubResource( 3 )
anims/fly = SubResource( 4 )

[node name="ExplodeTimer" type="Timer" parent="."]

[node name="Particles2D" type="Particles2D" parent="."]
z_index = -1
emitting = false
amount = 150
lifetime = 0.3
one_shot = true
process_material = SubResource( 7 )
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Lifespan" to="." method="_on_Lifespan_timeout"]
[connection signal="timeout" from="ExplodeTimer" to="." method="_on_ExplodeTimer_timeout"]
